--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:  
   nginx:
     build: .
-    container_name: nginx
+    container_name: myscope-nginx
     ports:
       - "443:443"
       - "5001:80"
