--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ listen 80 default_server;
 listen [::]:80 default_server;
 listen 443 default_server;
 
-server_name examgen.pro;
+server_name myscopes.org;
 
     location / {
             proxy_pass http://192.168.10.84:4173/;
