Rename some docker services

--- a/myscope-tunnel/docker-compose.yaml
+++ b/myscope-tunnel/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  cloudflared:
+  myscope_cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: myscope-tunnel
     command: tunnel --no-autoupdate run --token eyJhIjoiYzgyYjQxN2MzZDdiOTE0NDQzNTRhMGE5MWVmZjAyMjEiLCJ0IjoiMWJhMjhiNTQtMDJhZS00OWEwLThmYjItZTZmMzdhNzM0ZTMzIiwicyI6Ik5HWTJNbVpsTmpjdE16YzBPQzAwTXpnMExXSXlPVGN0WldWaU9UUTVaamhoTVRKbCJ9
