--- a/python/docker-compose.yaml
+++ b/python/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  api:
+  myscope-api:
     build: .
-    container_name: axe-api
+    container_name: myscope-api
     command: python3 ./src/api.py
     ports:
       - "7000:7000"
