--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,7 +1,7 @@
 FROM python
 WORKDIR /src
 
-RUN pip3 install setuptools "fastapi[all]" matplotlib psutil "pydantic<2" pymongo uvicorn fastapi_login flask bcrypt requests typing mongojoin pylatex
+RUN pip3 install setuptools "fastapi[all]" psutil "pydantic<2" pymongo uvicorn fastapi_login flask bcrypt requests typing mongojoin pylatex python-dotenv
 COPY . .
 
 EXPOSE 7000
